Fix terminal bottom overflow

--- a/static/style.css
+++ b/static/style.css
@@ -45,7 +45,7 @@ body {
 
 .pty-container {
   margin: -0.9em;
-  height: calc(100vh - 2em);
+  height: calc(100vh - 2.5em);
 }
 
 .item>.close.button:last-child {
